--- a/src/gui/alterarFuncionario.form
+++ b/src/gui/alterarFuncionario.form
@@ -410,17 +410,18 @@
         <Component class="javax.swing.JComboBox" name="jComboBoxFuncao">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="10">
-                <StringItem index="0" value="RH"/>
-                <StringItem index="1" value="Procon"/>
-                <StringItem index="2" value="Funape"/>
-                <StringItem index="3" value="CAS"/>
-                <StringItem index="4" value="Coordena&#xe7;&#xe3;o"/>
-                <StringItem index="5" value="Compesa"/>
-                <StringItem index="6" value="SDS"/>
-                <StringItem index="7" value="Detran"/>
-                <StringItem index="8" value="Limpeza"/>
-                <StringItem index="9" value="TI"/>
+              <StringArray count="11">
+                <StringItem index="0" value="Assistente Administrativo"/>
+                <StringItem index="1" value="RH"/>
+                <StringItem index="2" value="Procon"/>
+                <StringItem index="3" value="Funape"/>
+                <StringItem index="4" value="CAS"/>
+                <StringItem index="5" value="Coordena&#xe7;&#xe3;o"/>
+                <StringItem index="6" value="Compesa"/>
+                <StringItem index="7" value="SDS"/>
+                <StringItem index="8" value="Detran"/>
+                <StringItem index="9" value="Limpeza"/>
+                <StringItem index="10" value="TI"/>
               </StringArray>
             </Property>
           </Properties>
