--- a/src/gui/registrarAssinatura.form
+++ b/src/gui/registrarAssinatura.form
@@ -293,16 +293,22 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="4">
+                  <Table columnCount="6" rowCount="4">
                     <Column editable="true" title="Data" type="java.lang.Object"/>
                     <Column editable="true" title="Entrada" type="java.lang.Object"/>
                     <Column editable="true" title="Sa&#xed;da almo&#xe7;o" type="java.lang.Object"/>
                     <Column editable="true" title="Volta almo&#xe7;o" type="java.lang.Object"/>
                     <Column editable="true" title="Sa&#xed;da" type="java.lang.Object"/>
+                    <Column editable="true" title="Atestado" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
@@ -344,7 +350,7 @@
                 <StringItem index="0" value="Janeiro"/>
                 <StringItem index="1" value="Fevereiro"/>
                 <StringItem index="2" value="Mar&#xe7;o"/>
-                <StringItem index="3" value="Abrim"/>
+                <StringItem index="3" value="Abril"/>
                 <StringItem index="4" value="Maio"/>
                 <StringItem index="5" value="Junho"/>
                 <StringItem index="6" value="Julho"/>
